After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752749 - validate: tools: transcoding error due to wrong condition check
validate: tools: transcoding error due to wrong condition check
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-devtools
git master
Other Linux
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-23 02:06 UTC by Vineeth
Modified: 2015-08-16 13:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
add proper condition (1.02 KB, patch)
2015-07-23 02:09 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-07-23 02:06:29 UTC
get the below assertion due to wrong check
(gst-validate-transcoding-1.0:15509): GStreamer-CRITICAL **: gst_caps_from_string: assertion 'string' failed
Comment 1 Vineeth 2015-07-23 02:09:00 UTC
Created attachment 307947 [details] [review]
add proper condition
Comment 2 Thibault Saunier 2015-07-23 10:21:59 UTC
Review of attachment 307947 [details] [review]:

That looks wrong, when does that happen?
Comment 3 Thibault Saunier 2015-07-23 10:54:11 UTC
Review of attachment 307947 [details] [review]:

After discussing on IRC it looks like it is correct. Thanks
Comment 4 Nicolas Dufresne (ndufresne) 2015-08-05 21:19:54 UTC
Review of attachment 307947 [details] [review]:

commit c2a5909cd4dc933ad3384339a08bb6ac81af0794
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Thu Jul 23 11:08:18 2015 +0900

    validate: tools: transcoding error due to wrong condition check
    
    when checking the restriction caps, not adding proper check, which
    results in assertion error when calling gst_caps_from_string
    
    https://bugzilla.gnome.org/show_bug.cgi?id=752749